--- a/hw5/makefile
+++ b/hw5/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -pedantic
 
-minishell: minishell.c
+minishell: minishell.c minishell.h
 	$(CC) $(CFLAGS) -o minishell minishell.c
 
 clean:
